Fix side spacing of ordering buttons

--- a/src/styles/ordering.less
+++ b/src/styles/ordering.less
@@ -1,4 +1,5 @@
 .btn.btn-pt-records {
 	padding-top: 0;
 	padding-bottom: 0;
+	margin-left: 1em;
 }
